--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@metamask/template-snap",
-  "version": "0.7.0",
-  "description": "The 'Hello, world!' of MetaMask Snaps.",
+  "name": "@tthebc01/metamask-snap-example",
+  "version": "0.1.0",
+  "description": "Simple MetaMask snap for creating a donation button.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/snap-template.git"
+    "url": "https://github.com/TtheBC01/MetaMask-Snap-Example"
   },
   "license": "MIT",
   "main": "src/index.js",
