--- a/snap.manifest.json
+++ b/snap.manifest.json
@@ -1,18 +1,18 @@
 {
-  "version": "0.7.0",
+  "version": "0.1.0",
   "proposedName": "MetaMask Template Snap",
   "description": "A MetaMask Snap template.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/snap-template.git"
+    "url": "https://github.com/TtheBC01/MetaMask-Snap-Example"
   },
   "source": {
-    "shasum": "ugRI+2ippw2w2gNSGWpvCRu5L1LD2j4FWQ+KcO/1dIE=",
+    "shasum": "YSNRcZsQzi0iIsKaaQ0kftR6yDfudO5/NZ8CkN84qro=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
         "iconPath": "images/icon.svg",
-        "packageName": "@metamask/template-snap",
+        "packageName": "@tthebc01/metamask-snap-example",
         "registry": "https://registry.npmjs.org/"
       }
     }
